--- a/main-Copy1.ipynb
+++ b/main-Copy1.ipynb
@@ -2,16 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "toc": true
-   },
-   "source": [
-    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#No-Transaction-Band-Network\" data-toc-modified-id=\"No-Transaction-Band-Network-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>No-Transaction Band Network</a></span><ul class=\"toc-item\"><li><span><a href=\"#Define-derivatives\" data-toc-modified-id=\"Define-derivatives-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>Define derivatives</a></span></li><li><span><a href=\"#Experiment:-European-Option\" data-toc-modified-id=\"Experiment:-European-Option-1.2\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>Experiment: European Option</a></span><ul class=\"toc-item\"><li><span><a href=\"#Compute-profit-and-loss-with-hedging\" data-toc-modified-id=\"Compute-profit-and-loss-with-hedging-1.2.1\"><span class=\"toc-item-num\">1.2.1&nbsp;&nbsp;</span>Compute profit and loss with hedging</a></span></li><li><span><a href=\"#Create-hedging-models\" data-toc-modified-id=\"Create-hedging-models-1.2.2\"><span class=\"toc-item-num\">1.2.2&nbsp;&nbsp;</span>Create hedging models</a></span></li><li><span><a href=\"#Compute-profit-and-loss-before-training\" data-toc-modified-id=\"Compute-profit-and-loss-before-training-1.2.3\"><span class=\"toc-item-num\">1.2.3&nbsp;&nbsp;</span>Compute profit and loss before training</a></span></li><li><span><a href=\"#Fit-hedging-models\" data-toc-modified-id=\"Fit-hedging-models-1.2.4\"><span class=\"toc-item-num\">1.2.4&nbsp;&nbsp;</span>Fit hedging models</a></span></li><li><span><a href=\"#Compute-the-profit-loss-distributions-with-hedging\" data-toc-modified-id=\"Compute-the-profit-loss-distributions-with-hedging-1.2.5\"><span class=\"toc-item-num\">1.2.5&nbsp;&nbsp;</span>Compute the profit-loss distributions with hedging</a></span></li><li><span><a href=\"#Evaluate-the-best-premium-of-the-derivative\" data-toc-modified-id=\"Evaluate-the-best-premium-of-the-derivative-1.2.6\"><span class=\"toc-item-num\">1.2.6&nbsp;&nbsp;</span>Evaluate the best premium of the derivative</a></span></li></ul></li><li><span><a href=\"#Experiment:-Lookback-Option\" data-toc-modified-id=\"Experiment:-Lookback-Option-1.3\"><span class=\"toc-item-num\">1.3&nbsp;&nbsp;</span>Experiment: Lookback Option</a></span><ul class=\"toc-item\"><li><span><a href=\"#Create-hedging-models\" data-toc-modified-id=\"Create-hedging-models-1.3.1\"><span class=\"toc-item-num\">1.3.1&nbsp;&nbsp;</span>Create hedging models</a></span></li><li><span><a href=\"#Fit-hedging-models\" data-toc-modified-id=\"Fit-hedging-models-1.3.2\"><span class=\"toc-item-num\">1.3.2&nbsp;&nbsp;</span>Fit hedging models</a></span></li><li><span><a href=\"#Evaluate-the-best-premium-of-the-derivative\" data-toc-modified-id=\"Evaluate-the-best-premium-of-the-derivative-1.3.3\"><span class=\"toc-item-num\">1.3.3&nbsp;&nbsp;</span>Evaluate the best premium of the derivative</a></span></li></ul></li></ul></li></ul></div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# No-Transaction Band Network"
@@ -107,9 +97,9 @@
    "outputs": [],
    "source": [
     "# In each epoch, N_PATHS brownian motion time-series are generated.\n",
-    "N_PATHS = 50000\n",
+    "N_PATHS = 10000\n",
     "# How many times a model is updated in the experiment.\n",
-    "N_EPOCHS = 200"
+    "N_EPOCHS = 50"
    ]
   },
   {
@@ -652,8 +642,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loss=1.02289: 100%|██████████████████████████| 200/200 [00:11<00:00, 17.83it/s]\n",
-      "Loss=1.02312: 100%|██████████████████████████| 200/200 [00:09<00:00, 20.75it/s]\n"
+      "Loss=1.02289: 100%|██████████████████████████| 200/200 [00:11<00:00, 17.53it/s]\n",
+      "Loss=1.02312: 100%|██████████████████████████| 200/200 [00:09<00:00, 20.14it/s]\n"
      ]
     }
    ],
@@ -858,6 +848,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "NoTransactionBandNet(\n",
+       "  (mlp): MultiLayerPerceptron(\n",
+       "    (0): Linear(in_features=3, out_features=32, bias=True)\n",
+       "    (1): ReLU()\n",
+       "    (2): Linear(in_features=32, out_features=32, bias=True)\n",
+       "    (3): ReLU()\n",
+       "    (4): Linear(in_features=32, out_features=32, bias=True)\n",
+       "    (5): ReLU()\n",
+       "    (6): Linear(in_features=32, out_features=32, bias=True)\n",
+       "    (7): ReLU()\n",
+       "    (8): Linear(in_features=32, out_features=2, bias=True)\n",
+       "  )\n",
+       ")"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_ntb"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
    "outputs": [
@@ -920,8 +942,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loss=1.01860: 100%|██████████████████████████| 200/200 [00:11<00:00, 17.90it/s]\n",
-      "Loss=1.01896: 100%|██████████████████████████| 200/200 [00:09<00:00, 20.73it/s]\n"
+      "Loss=1.01860: 100%|██████████████████████████| 200/200 [00:11<00:00, 17.98it/s]\n",
+      "Loss=1.01896: 100%|██████████████████████████| 200/200 [00:14<00:00, 14.10it/s]\n"
      ]
     }
    ],
@@ -1030,6 +1052,13 @@
     "premium_reduced = (premium_ffn - premium_ntb) / premium_ffn * 100\n",
     "print(\"Reduced premium of a lookback option :\\t\", f\"{premium_reduced:.4f} %\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1050,19 +1079,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.8"
-  },
-  "toc": {
-   "base_numbering": 1,
-   "nav_menu": {},
-   "number_sections": true,
-   "sideBar": true,
-   "skip_h1_title": false,
-   "title_cell": "Table of Contents",
-   "title_sidebar": "Contents",
-   "toc_cell": true,
-   "toc_position": {},
-   "toc_section_display": true,
-   "toc_window_display": true
   }
  },
  "nbformat": 4,
